@@ -1,11 +1,10 @@
 from details.SampleSnpCall_pb2 import SampleSnpCall as SampleSnpCall
-from details.SampleSnpCall_pb2 import SnpCall as SnpCall
 from bl.core.messages.registry import message_codecs_registry
 
 
 class Encoder(object):
   def encode(self, sample_id, snp_id, call, confidence, sig_A, sig_B,
-             weight_AA, weight_AB, weight_BB)
+             weight_AA, weight_AB, weight_BB):
     """
     Will encode  to a SampleSnpCall msg.
     """
@@ -13,7 +12,7 @@ class Encoder(object):
     m.sample_id, m.snp_id, m.call, m.confidence = \
                  sample_id, snp_id, call, confidence
     m.sig_A, m.sig_B = sig_A, sig_B
-    m.weight_AA, m.weight_AB, m.weight_BB = weight_AA, weight_AB, weight_BB
+    m.w_AA, m.w_AB, m.w_BB = weight_AA, weight_AB, weight_BB
     return m
 
 class Decoder(object):
